# file-conversion-rs

./: Cargo.toml  LICENSE.txt  README.md  s
src/: main.rs
src/conversions/: gif.rs  jpeg.rs  jpg_to_png.rs  mp4.rs  png.rs  png_to_jpg.rs
