[package]
name = "file-conversion-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
dialoguer = "0.10.4"
dirs = "5.0.1"
ffmpeg-next = "6.0.0"
gif = "0.12.0"
image = "0.24.6"
native-dialog = "0.6.3"
