[package]
name = "file-conversion-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
crossterm = "0.26.1"
dialoguer = "0.10.4"
dirs = "5.0.1"
ffmpeg-next = "6.0.0"
gif = "0.12.0"
image = "0.24.6"
native-dialog = "0.6.3"
svg = "0.13.1"
webp = "0.2.2"
printpdf = "0.5.3"
